netpols-from-cyclonous/netpolB.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":null,"name":"base-1","namespace":"y"},"spec":{"egress":[{"ports":[{"port":80,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchExpressions":[{"key":"ns","operator":"In","values":["y","z"]}]},"podSelector":{"matchExpressions":[{"key":"pod","operator":"In","values":["a","b"]}]}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]}],"ingress":[{"from":[{"namespace [...]
  creationTimestamp: "2021-05-01T00:12:59Z"
  generation: 1
  managedFields:
  - apiVersion: networking.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        f:egress: {}
        f:ingress: {}
        f:podSelector:
          f:matchLabels:
            .: {}
            f:pod: {}
        f:policyTypes: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-05-01T00:12:59Z"
  name: base-1
  namespace: "y"
  resourceVersion: "14410"
  selfLink: /apis/networking.k8s.io/v1/namespaces/y/networkpolicies/base-1
  uid: 723712f5-8525-41fa-a84c-b4cd2f352d90
spec:
  egress:
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector:
        matchExpressions:
        - key: ns
          operator: In
          values:
          - "y"
          - z
      podSelector:
        matchExpressions:
        - key: pod
          operator: In
          values:
          - a
          - b
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: ns
          operator: In
          values:
          - x
          - "y"
      podSelector:
        matchExpressions:
        - key: pod
          operator: In
          values:
          - b
          - c
    ports:
    - port: 80
      protocol: TCP
  podSelector:
    matchLabels:
      pod: a
  policyTypes:
  - Ingress
  - Egress
